# dino_rs

./: .gitignore  .rustfmt.toml  Cargo.toml  README.md  rust-toolchain.toml
src/: main.rs
