[package]
name = "dino_rs"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["mark gutenberger <gutenfries@gmail.com>"]
repository = "https://github.com/gutenfries/dino_rs.git"

[dependencies]
bracket-lib = "0.8.1"

[profile.release]
codegen-units = 1
incremental = true
lto = true
opt-level = "z"